src/bootstrap/flex-bison-bootstrap/pg-bootstrap-lg-bison/pg.output
State 17 conflicts: 3 shift/reduce
State 91 conflicts: 1 shift/reduce, 2 reduce/reduce


Grammar

    0 $accept: File $end

    1 File: Grammar

    2 Grammar: "grammar" IDENTIFIER STRING_LITERAL "{" Headers Precedences Rules "}" Footer

    3 Headers: Header ";" Headers
    4        | Header ";"

    5 Header: "term" Identifier
    6       | "term" Identifier ":" Identifier
    7       | "term" Identifier STRING_LITERAL
    8       | "term" Identifier ":" Identifier STRING_LITERAL
    9       | "nonterm" Identifier
   10       | "nonterm" Identifier ":" Identifier
   11       | "start" Identifier
   12       | "header" TOKEN_CODE
   13       | "code" TOKEN_CODE
   14       | "roottype" STRING_LITERAL
   15       | "baseclass" STRING_LITERAL
   16       | "basetype" STRING_LITERAL
   17       | "basetype" "union" STRING_LITERAL
   18       | "returntype" STRING_LITERAL
   19       | BlankLines

   20 Precedences: Precedences Precedence ";"
   21            | Precedence ";"
   22            | %empty

   23 Precedence: "nonassoc" NonAssociativeTerminals
   24           | "left" LeftAssociativeTerminals
   25           | "right" RightAssociativeTerminals

   26 NonAssociativeTerminals: NonAssociativeTerminals NonAssociativeTerminal
   27                        | NonAssociativeTerminal

   28 NonAssociativeTerminal: STRING_LITERAL
   29                       | Identifier

   30 LeftAssociativeTerminals: LeftAssociativeTerminals LeftAssociativeTerminal
   31                         | LeftAssociativeTerminal

   32 LeftAssociativeTerminal: STRING_LITERAL
   33                        | Identifier

   34 RightAssociativeTerminals: RightAssociativeTerminals RightAssociativeTerminal
   35                          | RightAssociativeTerminal

   36 RightAssociativeTerminal: STRING_LITERAL
   37                         | Identifier

   38 Footer: BlankLines

   39 BlankLines: BlankLines NEWLINE
   40           | %empty

   41 Rules: Rule ";" Rules
   42      | Rule ";"

   43 Rule: "production" Identifier "=" Productions

   44 Productions: Productions "|" Production
   45            | Production

   46 Production: NamedSymbols
   47           | NamedSymbols TOKEN_ACTION
   48           | "epsilon"
   49           | "epsilon" TOKEN_ACTION
   50           | %empty
   51           | TOKEN_ACTION

   52 NamedSymbols: NamedSymbols NamedSymbol
   53             | NamedSymbol

   54 NamedSymbol: Identifier ":" Symbol
   55            | Symbol

   56 Symbol: Identifier
   57       | STRING_LITERAL
   58       | "$"

   59 Keyword: "grammar"
   60        | "term"
   61        | "nonterm"
   62        | "productions"
   63        | "start"
   64        | "code"
   65        | "header"
   66        | "baseclass"
   67        | "roottype"
   68        | "basetype"
   69        | "returntype"
   70        | "union"
   71        | "nonassoc"
   72        | "left"
   73        | "right"
   74        | "epsilon"

   75 Identifier: Keyword
   76           | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
"grammar" (258) 2 59
"term" (259) 5 6 7 8 60
"nonterm" (260) 9 10 61
"production" (261) 43
"start" (262) 11 63
"epsilon" (263) 48 49 74
"header" (264) 12 65
"code" (265) 13 64
"roottype" (266) 14 67
"baseclass" (267) 15 66
"basetype" (268) 16 17 68
"returntype" (269) 18 69
"union" (270) 17 70
"nonassoc" (271) 23 71
"left" (272) 24 72
"right" (273) 25 73
"$" (274) 58
"=" (275) 43
":" (276) 6 8 10 54
"|" (277) 44
";" (278) 3 4 20 21 41 42
"{" (279) 2
"}" (280) 2
IDENTIFIER (281) 2 76
STRING_LITERAL (282) 2 7 8 14 15 16 17 18 28 32 36 57
TOKEN_ACTION (283) 47 49 51
TOKEN_CODE (284) 12 13
NEWLINE (285) 39
"productions" (286) 62


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
File (33)
    on left: 1, on right: 0
Grammar (34)
    on left: 2, on right: 1
Headers (35)
    on left: 3 4, on right: 2 3
Header (36)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 3 4
Precedences (37)
    on left: 20 21 22, on right: 2 20
Precedence (38)
    on left: 23 24 25, on right: 20 21
NonAssociativeTerminals (39)
    on left: 26 27, on right: 23 26
NonAssociativeTerminal (40)
    on left: 28 29, on right: 26 27
LeftAssociativeTerminals (41)
    on left: 30 31, on right: 24 30
LeftAssociativeTerminal (42)
    on left: 32 33, on right: 30 31
RightAssociativeTerminals (43)
    on left: 34 35, on right: 25 34
RightAssociativeTerminal (44)
    on left: 36 37, on right: 34 35
Footer (45)
    on left: 38, on right: 2
BlankLines (46)
    on left: 39 40, on right: 19 38 39
Rules (47)
    on left: 41 42, on right: 2 41
Rule (48)
    on left: 43, on right: 41 42
Productions (49)
    on left: 44 45, on right: 43 44
Production (50)
    on left: 46 47 48 49 50 51, on right: 44 45
NamedSymbols (51)
    on left: 52 53, on right: 46 47 52
NamedSymbol (52)
    on left: 54 55, on right: 52 53
Symbol (53)
    on left: 56 57 58, on right: 54 55
Keyword (54)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74, on right:
    75
Identifier (55)
    on left: 75 76, on right: 5 6 7 8 9 10 11 29 33 37 43 54 56


State 0

    0 $accept: . File $end
    1 File: . Grammar
    2 Grammar: . "grammar" IDENTIFIER STRING_LITERAL "{" Headers Precedences Rules "}" Footer

    "grammar"  shift, and go to state 1

    File     go to state 2
    Grammar  go to state 3


State 1

    2 Grammar: "grammar" . IDENTIFIER STRING_LITERAL "{" Headers Precedences Rules "}" Footer

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: File . $end

    $end  shift, and go to state 5


State 3

    1 File: Grammar .

    $default  reduce using rule 1 (File)


State 4

    2 Grammar: "grammar" IDENTIFIER . STRING_LITERAL "{" Headers Precedences Rules "}" Footer

    STRING_LITERAL  shift, and go to state 6


State 5

    0 $accept: File $end .

    $default  accept


State 6

    2 Grammar: "grammar" IDENTIFIER STRING_LITERAL . "{" Headers Precedences Rules "}" Footer

    "{"  shift, and go to state 7


State 7

    2 Grammar: "grammar" IDENTIFIER STRING_LITERAL "{" . Headers Precedences Rules "}" Footer
    3 Headers: . Header ";" Headers
    4        | . Header ";"
    5 Header: . "term" Identifier
    6       | . "term" Identifier ":" Identifier
    7       | . "term" Identifier STRING_LITERAL
    8       | . "term" Identifier ":" Identifier STRING_LITERAL
    9       | . "nonterm" Identifier
   10       | . "nonterm" Identifier ":" Identifier
   11       | . "start" Identifier
   12       | . "header" TOKEN_CODE
   13       | . "code" TOKEN_CODE
   14       | . "roottype" STRING_LITERAL
   15       | . "baseclass" STRING_LITERAL
   16       | . "basetype" STRING_LITERAL
   17       | . "basetype" "union" STRING_LITERAL
   18       | . "returntype" STRING_LITERAL
   19       | . BlankLines
   39 BlankLines: . BlankLines NEWLINE
   40           | .  [";", NEWLINE]

    "term"        shift, and go to state 8
    "nonterm"     shift, and go to state 9
    "start"       shift, and go to state 10
    "header"      shift, and go to state 11
    "code"        shift, and go to state 12
    "roottype"    shift, and go to state 13
    "baseclass"   shift, and go to state 14
    "basetype"    shift, and go to state 15
    "returntype"  shift, and go to state 16

    $default  reduce using rule 40 (BlankLines)

    Headers     go to state 17
    Header      go to state 18
    BlankLines  go to state 19


State 8

    5 Header: "term" . Identifier
    6       | "term" . Identifier ":" Identifier
    7       | "term" . Identifier STRING_LITERAL
    8       | "term" . Identifier ":" Identifier STRING_LITERAL
   59 Keyword: . "grammar"
   60        | . "term"
   61        | . "nonterm"
   62        | . "productions"
   63        | . "start"
   64        | . "code"
   65        | . "header"
   66        | . "baseclass"
   67        | . "roottype"
   68        | . "basetype"
   69        | . "returntype"
   70        | . "union"
   71        | . "nonassoc"
   72        | . "left"
   73        | . "right"
   74        | . "epsilon"
   75 Identifier: . Keyword
   76           | . IDENTIFIER

    "grammar"      shift, and go to state 20
    "term"         shift, and go to state 21
    "nonterm"      shift, and go to state 22
    "start"        shift, and go to state 23
    "epsilon"      shift, and go to state 24
    "header"       shift, and go to state 25
    "code"         shift, and go to state 26
    "roottype"     shift, and go to state 27
    "baseclass"    shift, and go to state 28
    "basetype"     shift, and go to state 29
    "returntype"   shift, and go to state 30
    "union"        shift, and go to state 31
    "nonassoc"     shift, and go to state 32
    "left"         shift, and go to state 33
    "right"        shift, and go to state 34
    IDENTIFIER     shift, and go to state 35
    "productions"  shift, and go to state 36

    Keyword     go to state 37
    Identifier  go to state 38


State 9

    9 Header: "nonterm" . Identifier
   10       | "nonterm" . Identifier ":" Identifier
   59 Keyword: . "grammar"
   60        | . "term"
   61        | . "nonterm"
   62        | . "productions"
   63        | . "start"
   64        | . "code"
   65        | . "header"
   66        | . "baseclass"
   67        | . "roottype"
   68        | . "basetype"
   69        | . "returntype"
   70        | . "union"
   71        | . "nonassoc"
   72        | . "left"
   73        | . "right"
   74        | . "epsilon"
   75 Identifier: . Keyword
   76           | . IDENTIFIER

    "grammar"      shift, and go to state 20
    "term"         shift, and go to state 21
    "nonterm"      shift, and go to state 22
    "start"        shift, and go to state 23
    "epsilon"      shift, and go to state 24
    "header"       shift, and go to state 25
    "code"         shift, and go to state 26
    "roottype"     shift, and go to state 27
    "baseclass"    shift, and go to state 28
    "basetype"     shift, and go to state 29
    "returntype"   shift, and go to state 30
    "union"        shift, and go to state 31
    "nonassoc"     shift, and go to state 32
    "left"         shift, and go to state 33
    "right"        shift, and go to state 34
    IDENTIFIER     shift, and go to state 35
    "productions"  shift, and go to state 36

    Keyword     go to state 37
    Identifier  go to state 39


State 10

   11 Header: "start" . Identifier
   59 Keyword: . "grammar"
   60        | . "term"
   61        | . "nonterm"
   62        | . "productions"
   63        | . "start"
   64        | . "code"
   65        | . "header"
   66        | . "baseclass"
   67        | . "roottype"
   68        | . "basetype"
   69        | . "returntype"
   70        | . "union"
   71        | . "nonassoc"
   72        | . "left"
   73        | . "right"
   74        | . "epsilon"
   75 Identifier: . Keyword
   76           | . IDENTIFIER

    "grammar"      shift, and go to state 20
    "term"         shift, and go to state 21
    "nonterm"      shift, and go to state 22
    "start"        shift, and go to state 23
    "epsilon"      shift, and go to state 24
    "header"       shift, and go to state 25
    "code"         shift, and go to state 26
    "roottype"     shift, and go to state 27
    "baseclass"    shift, and go to state 28
    "basetype"     shift, and go to state 29
    "returntype"   shift, and go to state 30
    "union"        shift, and go to state 31
    "nonassoc"     shift, and go to state 32
    "left"         shift, and go to state 33
    "right"        shift, and go to state 34
    IDENTIFIER     shift, and go to state 35
    "productions"  shift, and go to state 36

    Keyword     go to state 37
    Identifier  go to state 40


State 11

   12 Header: "header" . TOKEN_CODE

    TOKEN_CODE  shift, and go to state 41


State 12

   13 Header: "code" . TOKEN_CODE

    TOKEN_CODE  shift, and go to state 42


State 13

   14 Header: "roottype" . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 43


State 14

   15 Header: "baseclass" . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 44


State 15

   16 Header: "basetype" . STRING_LITERAL
   17       | "basetype" . "union" STRING_LITERAL

    "union"         shift, and go to state 45
    STRING_LITERAL  shift, and go to state 46


State 16

   18 Header: "returntype" . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 47


State 17

    2 Grammar: "grammar" IDENTIFIER STRING_LITERAL "{" Headers . Precedences Rules "}" Footer
   20 Precedences: . Precedences Precedence ";"
   21            | . Precedence ";"
   22            | .  ["production", "nonassoc", "left", "right"]
   23 Precedence: . "nonassoc" NonAssociativeTerminals
   24           | . "left" LeftAssociativeTerminals
   25           | . "right" RightAssociativeTerminals

    "nonassoc"  shift, and go to state 48
    "left"      shift, and go to state 49
    "right"     shift, and go to state 50

    "nonassoc"  [reduce using rule 22 (Precedences)]
    "left"      [reduce using rule 22 (Precedences)]
    "right"     [reduce using rule 22 (Precedences)]
    $default    reduce using rule 22 (Precedences)

    Precedences  go to state 51
    Precedence   go to state 52


State 18

    3 Headers: Header . ";" Headers
    4        | Header . ";"

    ";"  shift, and go to state 53


State 19

   19 Header: BlankLines .  [";"]
   39 BlankLines: BlankLines . NEWLINE

    NEWLINE  shift, and go to state 54

    $default  reduce using rule 19 (Header)


State 20

   59 Keyword: "grammar" .

    $default  reduce using rule 59 (Keyword)


State 21

   60 Keyword: "term" .

    $default  reduce using rule 60 (Keyword)


State 22

   61 Keyword: "nonterm" .

    $default  reduce using rule 61 (Keyword)


State 23

   63 Keyword: "start" .

    $default  reduce using rule 63 (Keyword)


State 24

   74 Keyword: "epsilon" .

    $default  reduce using rule 74 (Keyword)


State 25

   65 Keyword: "header" .

    $default  reduce using rule 65 (Keyword)


State 26

   64 Keyword: "code" .

    $default  reduce using rule 64 (Keyword)


State 27

   67 Keyword: "roottype" .

    $default  reduce using rule 67 (Keyword)


State 28

   66 Keyword: "baseclass" .

    $default  reduce using rule 66 (Keyword)


State 29

   68 Keyword: "basetype" .

    $default  reduce using rule 68 (Keyword)


State 30

   69 Keyword: "returntype" .

    $default  reduce using rule 69 (Keyword)


State 31

   70 Keyword: "union" .

    $default  reduce using rule 70 (Keyword)


State 32

   71 Keyword: "nonassoc" .

    $default  reduce using rule 71 (Keyword)


State 33

   72 Keyword: "left" .

    $default  reduce using rule 72 (Keyword)


State 34

   73 Keyword: "right" .

    $default  reduce using rule 73 (Keyword)


State 35

   76 Identifier: IDENTIFIER .

    $default  reduce using rule 76 (Identifier)


State 36

   62 Keyword: "productions" .

    $default  reduce using rule 62 (Keyword)


State 37

   75 Identifier: Keyword .

    $default  reduce using rule 75 (Identifier)


State 38

    5 Header: "term" Identifier .  [";"]
    6       | "term" Identifier . ":" Identifier
    7       | "term" Identifier . STRING_LITERAL
    8       | "term" Identifier . ":" Identifier STRING_LITERAL

    ":"             shift, and go to state 55
    STRING_LITERAL  shift, and go to state 56

    $default  reduce using rule 5 (Header)


State 39

    9 Header: "nonterm" Identifier .  [";"]
   10       | "nonterm" Identifier . ":" Identifier

    ":"  shift, and go to state 57

    $default  reduce using rule 9 (Header)


State 40

   11 Header: "start" Identifier .

    $default  reduce using rule 11 (Header)


State 41

   12 Header: "header" TOKEN_CODE .

    $default  reduce using rule 12 (Header)


State 42

   13 Header: "code" TOKEN_CODE .

    $default  reduce using rule 13 (Header)


State 43

   14 Header: "roottype" STRING_LITERAL .

    $default  reduce using rule 14 (Header)


State 44

   15 Header: "baseclass" STRING_LITERAL .

    $default  reduce using rule 15 (Header)


State 45

   17 Header: "basetype" "union" . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 58


State 46

   16 Header: "basetype" STRING_LITERAL .

    $default  reduce using rule 16 (Header)


State 47

   18 Header: "returntype" STRING_LITERAL .

    $default  reduce using rule 18 (Header)


State 48

   23 Precedence: "nonassoc" . NonAssociativeTerminals
   26 NonAssociativeTerminals: . NonAssociativeTerminals NonAssociativeTerminal
   27                        | . NonAssociativeTerminal
   28 NonAssociativeTerminal: . STRING_LITERAL
   29                       | . Identifier
   59 Keyword: . "grammar"
   60        | . "term"
   61        | . "nonterm"
   62        | . "productions"
   63        | . "start"
   64        | . "code"
   65        | . "header"
   66        | . "baseclass"
   67        | . "roottype"
   68        | . "basetype"
   69        | . "returntype"
   70        | . "union"
   71        | . "nonassoc"
   72        | . "left"
   73        | . "right"
   74        | . "epsilon"
   75 Identifier: . Keyword
   76           | . IDENTIFIER

    "grammar"       shift, and go to state 20
    "term"          shift, and go to state 21
    "nonterm"       shift, and go to state 22
    "start"         shift, and go to state 23
    "epsilon"       shift, and go to state 24
    "header"        shift, and go to state 25
    "code"          shift, and go to state 26
    "roottype"      shift, and go to state 27
    "baseclass"     shift, and go to state 28
    "basetype"      shift, and go to state 29
    "returntype"    shift, and go to state 30
    "union"         shift, and go to state 31
    "nonassoc"      shift, and go to state 32
    "left"          shift, and go to state 33
    "right"         shift, and go to state 34
    IDENTIFIER      shift, and go to state 35
    STRING_LITERAL  shift, and go to state 59
    "productions"   shift, and go to state 36

    NonAssociativeTerminals  go to state 60
    NonAssociativeTerminal   go to state 61
    Keyword                  go to state 37
    Identifier               go to state 62


State 49

   24 Precedence: "left" . LeftAssociativeTerminals
   30 LeftAssociativeTerminals: . LeftAssociativeTerminals LeftAssociativeTerminal
   31                         | . LeftAssociativeTerminal
   32 LeftAssociativeTerminal: . STRING_LITERAL
   33                        | . Identifier
   59 Keyword: . "grammar"
   60        | . "term"
   61        | . "nonterm"
   62        | . "productions"
   63        | . "start"
   64        | . "code"
   65        | . "header"
   66        | . "baseclass"
   67        | . "roottype"
   68        | . "basetype"
   69        | . "returntype"
   70        | . "union"
   71        | . "nonassoc"
   72        | . "left"
   73        | . "right"
   74        | . "epsilon"
   75 Identifier: . Keyword
   76           | . IDENTIFIER

    "grammar"       shift, and go to state 20
    "term"          shift, and go to state 21
    "nonterm"       shift, and go to state 22
    "start"         shift, and go to state 23
    "epsilon"       shift, and go to state 24
    "header"        shift, and go to state 25
    "code"          shift, and go to state 26
    "roottype"      shift, and go to state 27
    "baseclass"     shift, and go to state 28
    "basetype"      shift, and go to state 29
    "returntype"    shift, and go to state 30
    "union"         shift, and go to state 31
    "nonassoc"      shift, and go to state 32
    "left"          shift, and go to state 33
    "right"         shift, and go to state 34
    IDENTIFIER      shift, and go to state 35
    STRING_LITERAL  shift, and go to state 63
    "productions"   shift, and go to state 36

    LeftAssociativeTerminals  go to state 64
    LeftAssociativeTerminal   go to state 65
    Keyword                   go to state 37
    Identifier                go to state 66


State 50

   25 Precedence: "right" . RightAssociativeTerminals
   34 RightAssociativeTerminals: . RightAssociativeTerminals RightAssociativeTerminal
   35                          | . RightAssociativeTerminal
   36 RightAssociativeTerminal: . STRING_LITERAL
   37                         | . Identifier
   59 Keyword: . "grammar"
   60        | . "term"
   61        | . "nonterm"
   62        | . "productions"
   63        | . "start"
   64        | . "code"
   65        | . "header"
   66        | . "baseclass"
   67        | . "roottype"
   68        | . "basetype"
   69        | . "returntype"
   70        | . "union"
   71        | . "nonassoc"
   72        | . "left"
   73        | . "right"
   74        | . "epsilon"
   75 Identifier: . Keyword
   76           | . IDENTIFIER

    "grammar"       shift, and go to state 20
    "term"          shift, and go to state 21
    "nonterm"       shift, and go to state 22
    "start"         shift, and go to state 23
    "epsilon"       shift, and go to state 24
    "header"        shift, and go to state 25
    "code"          shift, and go to state 26
    "roottype"      shift, and go to state 27
    "baseclass"     shift, and go to state 28
    "basetype"      shift, and go to state 29
    "returntype"    shift, and go to state 30
    "union"         shift, and go to state 31
    "nonassoc"      shift, and go to state 32
    "left"          shift, and go to state 33
    "right"         shift, and go to state 34
    IDENTIFIER      shift, and go to state 35
    STRING_LITERAL  shift, and go to state 67
    "productions"   shift, and go to state 36

    RightAssociativeTerminals  go to state 68
    RightAssociativeTerminal   go to state 69
    Keyword                    go to state 37
    Identifier                 go to state 70


State 51

    2 Grammar: "grammar" IDENTIFIER STRING_LITERAL "{" Headers Precedences . Rules "}" Footer
   20 Precedences: Precedences . Precedence ";"
   23 Precedence: . "nonassoc" NonAssociativeTerminals
   24           | . "left" LeftAssociativeTerminals
   25           | . "right" RightAssociativeTerminals
   41 Rules: . Rule ";" Rules
   42      | . Rule ";"
   43 Rule: . "production" Identifier "=" Productions

    "production"  shift, and go to state 71
    "nonassoc"    shift, and go to state 48
    "left"        shift, and go to state 49
    "right"       shift, and go to state 50

    Precedence  go to state 72
    Rules       go to state 73
    Rule        go to state 74


State 52

   21 Precedences: Precedence . ";"

    ";"  shift, and go to state 75


State 53

    3 Headers: . Header ";" Headers
    3        | Header ";" . Headers
    4        | . Header ";"
    4        | Header ";" .  ["production", "nonassoc", "left", "right"]
    5 Header: . "term" Identifier
    6       | . "term" Identifier ":" Identifier
    7       | . "term" Identifier STRING_LITERAL
    8       | . "term" Identifier ":" Identifier STRING_LITERAL
    9       | . "nonterm" Identifier
   10       | . "nonterm" Identifier ":" Identifier
   11       | . "start" Identifier
   12       | . "header" TOKEN_CODE
   13       | . "code" TOKEN_CODE
   14       | . "roottype" STRING_LITERAL
   15       | . "baseclass" STRING_LITERAL
   16       | . "basetype" STRING_LITERAL
   17       | . "basetype" "union" STRING_LITERAL
   18       | . "returntype" STRING_LITERAL
   19       | . BlankLines
   39 BlankLines: . BlankLines NEWLINE
   40           | .  [";", NEWLINE]

    "term"        shift, and go to state 8
    "nonterm"     shift, and go to state 9
    "start"       shift, and go to state 10
    "header"      shift, and go to state 11
    "code"        shift, and go to state 12
    "roottype"    shift, and go to state 13
    "baseclass"   shift, and go to state 14
    "basetype"    shift, and go to state 15
    "returntype"  shift, and go to state 16

    ";"       reduce using rule 40 (BlankLines)
    NEWLINE   reduce using rule 40 (BlankLines)
    $default  reduce using rule 4 (Headers)

    Headers     go to state 76
    Header      go to state 18
    BlankLines  go to state 19


State 54

   39 BlankLines: BlankLines NEWLINE .

    $default  reduce using rule 39 (BlankLines)


State 55

    6 Header: "term" Identifier ":" . Identifier
    8       | "term" Identifier ":" . Identifier STRING_LITERAL
   59 Keyword: . "grammar"
   60        | . "term"
   61        | . "nonterm"
   62        | . "productions"
   63        | . "start"
   64        | . "code"
   65        | . "header"
   66        | . "baseclass"
   67        | . "roottype"
   68        | . "basetype"
   69        | . "returntype"
   70        | . "union"
   71        | . "nonassoc"
   72        | . "left"
   73        | . "right"
   74        | . "epsilon"
   75 Identifier: . Keyword
   76           | . IDENTIFIER
